change frequency to accept a list instead of sep objects
